@@ -1,6 +1,9 @@
 1.3 - 201xxxxx
 ==============
 
+Client library:
+- Fix support for Python 2.6, 3.0, 3.1.
+
 
 1.2 - 20130708
 ==============
